--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-V9X59H4XKR"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-V9X59H4XKR');
+        </script>        
         <meta charset="utf-8"/>
         <title>Stati</title>
         <meta content="Track your in-game stats with a Discord bot!" name="description"/>
