--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
             <div class="w-container">
                 <div class="w-row">
                     <div class="footer-column w-col w-col-3">
-                        <h4>COMPANY</h4>
+                        <h4>Stati</h4>
                         <ul role="list" class="w-list-unstyled">
                             <li>
                                 <a href="index.html" class="footer-link">Home</a>
@@ -113,6 +113,9 @@
                             <li>
                                 <a href="about.html" class="footer-link">Frequently Asked Questions</a>
                             </li>
+                            <li>
+                                <a href="privacy.txt" class="footer-link">Privacy Policy</a>
+                            </li>                             
                         </ul>
                     </div>
                     <div class="footer-column w-col w-col-3">
