--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
             </div>
             <h4 class="heading-4">7/19/2021 - Stati is launched in a full live beta build.</h4>
             <p class="paragraph-4">More features are to come, beta build comes with CSGO stat tracker and Rainbow Six Siege. A Valorant stat tracker is planned to be released.</p>
-        </div>
+            <h4 class="heading-4">8/12/2021 - Added operator data for R6, more CSGO recoil patterns, Valorant is still in the works.</h4>
+        </div>        
         <div class="section sign-up">
             <div class="w-container">
                 <div class="w-row">
